# codereview.ai

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
gitreview_gpt/: __main__.py  app.py  constants.py  domain.py  formatter.py  prompt.py  request.py  reviewer.py  utils.py
gitreview_gpt/treesitter/: treesitter.py  treesitter_go.py  treesitter_java.py  treesitter_js.py  treesitter_kt.py  treesitter_py.py  treesitter_registry.py  treesitter_rs.py  treesitter_ts.py
reviewbuddy_gpt/: __main__.py  app.py
tests/: git_diff_parser_test.py  review_parser.py  review_parser_test.py  test_git_diff_parser.py  test_review_parser.py  test_utils.py  utils_test.py
