[tool.poetry]
name = "reviewbuddy-gpt"
version = "0.1.0"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
readme = "README.md"
packages = [{ include = "reviewbuddy_gpt" }]

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.4.0"
yaspin = "^2.3.0"

[tool.poetry.scripts]
rbuddy = "reviewbuddy_gpt.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
